# hindent

./: .dir-locals.el  .ghci  .ghcid  .gitignore  .hindent  .hindent.yaml  .travis.yml  BENCHMARKS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  MIGRATION.md  README.md  SECURITY.md  TESTS.md  TODO.org  cabal.project  cabal.sandbox.config  hie.yaml  hindent.cabal  inp.hs  package.yaml  shell.nix  stack.yaml  test.hs
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: CI.yml  Cabal.yml  Stack.yml  presubmit-cabal.yaml  presubmit-stack.yaml  release.yaml  scorecards.yaml  scorecards.yml  static-checks.yaml
app/: Main.hs
atom/: hindent.coffee
benchmarks/: BigDeclarations.hs  Main.hs  Markdone.hs  listprinters.hs
elisp/: hindent.el
hooks/: README.md  build  post_push
internal/HIndent/Internal/Test/: Markdone.hs
scripts/: test-docker  test-ghcs
src/: CabalFile.hs  HIndent.hs  HLindent.hs  Main.hs
src/HIndent/: AST.hs  Applicative.hs  Ast.hs  ByteString.hs  CabalFile.hs  CodeBlock.hs  Combinators.hs  CommandlineOptions.hs  Comments.hs  Config.hs  Error.hs  Fixity.hs  Instances.hs  Language.hs  LanguageExtension.hs  Merge.hs  ModulePreprocessing.hs  Parse.hs  Pragma.hs  Pretty.hs  Pretty.hs-boot  Printer.hs  Refactoring.hs  Types.hs  macros.h
src/HIndent/Ast/: Cmd.hs  Cmd.hs-boot  Comment.hs  Context.hs  Declaration.hs  Expression.hs  Expression.hs-boot  FileHeaderPragma.hs  Guard.hs  Identifier.hs  Import.hs  IsGenLocatedLocation.hs  Literal.hs  LocalBinds.hs  Match.hs  MatchGroup.hs  MatchGroup.hs-boot  Module.hs  NodeComments.hs  Pattern.hs  Pattern.hs-boot  Role.hs  Statement.hs  TextValue.hs  Type.hs  Type.hs-boot  WhereClause.hs  WithComments.hs  WithComments.hs-boot
src/HIndent/Ast/Declaration/: Annotation.hs  Bind.hs  Bind.hs-boot  Class.hs  Collection.hs  Data.hs  Default.hs  Family.hs  Foreign.hs  PatternSynonym.hs  Rule.hs  Rule.hs-boot  Signature.hs  Splice.hs  StandAloneDeriving.hs  TypeSynonym.hs  Warning.hs
src/HIndent/Ast/Declaration/Annotation/: Provenance.hs  Role.hs
src/HIndent/Ast/Declaration/Data/: Body.hs  (+4 more)
src/HIndent/Ast/Expression/: Bracket.hs  DoOrMdo.hs  FieldSelector.hs  ListComprehension.hs  OverloadedLabel.hs  Pragmatic.hs  QualifiedDo.hs  RangeExpression.hs  RecordConstructionField.hs  RecordUpdateField.hs  Splice.hs  Variable.hs
src/HIndent/Ast/FileHeaderPragma/: Collection.hs
src/HIndent/Ast/GhcOrdered/: BindGroupElement.hs  BindGroupElement.hs-boot  BindGroupElements.hs  ClassElement.hs  InstanceMember.hs
src/HIndent/Ast/Import/: Collection.hs  Entry.hs  ImportingOrHiding.hs  Qualification.hs
src/HIndent/Ast/LocalBinds/: Declaration.hs  Declarations.hs  ImplicitBinding.hs  ImplicitBindings.hs
src/HIndent/Ast/Module/: Declaration.hs  Name.hs  Name.hs-boot  Warning.hs
src/HIndent/Ast/Name/: ImportExport.hs  Infix.hs  Prefix.hs  RecordField.hs
src/HIndent/Ast/Operator/: Infix.hs  Prefix.hs
src/HIndent/Ast/Pattern/: RecordFields.hs
src/HIndent/Ast/Record/: Field.hs
src/HIndent/Ast/Type/: Argument.hs  Bang.hs  Forall.hs  ImplicitParameterName.hs  Literal.hs  Multiplicity.hs  Strictness.hs  UniversalQuantifier.hs  Unpackedness.hs  Variable.hs
src/HIndent/GhcLibParserWrapper/GHC/: Hs.hs
src/HIndent/GhcOrdered/: BindGroupElement.hs  ClassElement.hs  InstanceMember.hs
src/HIndent/LanguageExtension/: Conversion.hs  Types.hs
src/HIndent/ModulePreprocessing/: CommentRelocation.hs
src/HIndent/Path/: Find.hs
src/HIndent/Pretty/: Combinators.hs  Import.hs  NodeComments.hs  Pragma.hs  SigBindFamily.hs  Types.hs
src/HIndent/Pretty/Combinators/: Comment.hs  Getter.hs  Indent.hs  Lineup.hs  Op.hs  Outputable.hs  RhsSeparator.hs  String.hs  Switch.hs  Wrap.hs
src/HIndent/Pretty/Import/: Sort.hs
src/HIndent/Styles/: ChrisDone.hs  Cramer.hs  Exact.hs  Fundamental.hs  Gibiansky.hs  JohanTibell.hs  MichaelSnoyman.hs  TonyDay.hs
src/HIndent/Text/Show/: Unicode.hs
src/main/: Benchmark.hs  Main.hs  Markdone.hs  Test.hs  TestGenerate.hs  Tests.hs
src/main/Path/: Find.hs  IO.hs
test/: Spec.hs
test/chris-done/expected/: 1.exp  10.exp  11.exp  12.exp  13.exp  14.exp  15.exp  17.exp  18.exp  19.exp  2.exp  20.exp  3.exp  6.exp  7.exp  8.exp  9.exp
test/chris-done/tests/: 1.test  12.test  17.test  20.test  4.test  6.test
test/cramer/expected/: app.exp  applicative.exp  class.exp  data.exp  do.exp  guards.exp  if.exp  import.exp  infix.exp  let.exp  lists.exp  modulehead.exp  records.exp  search.exp  tuple.exp  typesig.exp
test/cramer/tests/: app.test  applicative.test  class.test  data.test  do.test  guards.test  if.test  import.test  infix.test  let.test  lists.test  modulehead.test  records.test  search.test  tuple.test  typesig.test
test/exact/expected/: 12.exp  13.exp  14.exp  2.exp  5.exp  6.exp  8.exp  9.exp
test/exact/tests/: 11.test  4.test
test/fundamental/expected/: 10.exp  11.exp  13.exp  14.exp  15.exp  16.exp  18.exp  19.exp  2.exp  3.exp  4.exp  5.exp  6.exp  7.exp  8.exp  9.exp
test/fundamental/tests/: 7.test
test/gibiansky/expected/: 1.exp  10.exp  11.exp  12.exp  13.exp  14.exp  15.exp  16.exp  17.exp  18.exp  19.exp  2.exp  20.exp  21.exp  23.exp  24.exp  26.exp  27.exp  28.exp  29.exp  3.exp  30.exp  31.exp  32.exp  34.exp  35.exp  36.exp  38.exp  39.exp  4.exp  40.exp  41.exp  42.exp  43.exp  5.exp  6.exp  7.exp  8.exp  9.exp
test/gibiansky/tests/: 10.test  11.test  12.test  13.test  15.test  18.test  19.test  2.test  22.test  24.test  25.test  27.test  3.test  30.test  31.test  32.test  33.exp  34.test  36.test  37.test  38.test  39.test  41.test  43.test  44.test  45.test  46.test  5.test  8.test
test/johan-tibell/expected/: 1.exp  2.exp  3.exp  4.exp  5.exp  6.exp  7.exp
test/johan-tibell/tests/: 1.test  3.test  4.test  5.test  6.test  7.test
test/tony-day/: testParsing.hs
test/tony-day/expected/: 1.exp  2.exp  expected1.hs  expected2.hs
test/tony-day/tests/: 1.test  2.test  test1.hs  test2.hs
tests/: Main.hs  TestGenerate.hs
vim/: hindent.vim
(+64 files in other folders)
