name:                hindent
version:             5.3.3
synopsis:            Extensible Haskell pretty printer
description:         Extensible Haskell pretty printer. Both a library and an executable.
                     .
                     See the Github page for usage\/explanation: <https://github.com/mihaimaruseac/hindent>
license:             BSD3
stability:           Unstable
license-file:        LICENSE.md
author:              Mihai Maruseac, Chris Done, Andrew Gibiansky, Tobias Pflug, Pierre Radermecker
maintainer:          mihaimaruseac@gmail.com
copyright:           2014 Chris Done, 2015 Andrew Gibiansky, 2021 Mihai Maruseac
category:            Development
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/mihaimaruseac/hindent
bug-reports:         https://github.com/mihaimaruseac/hindent/issues
data-files:          elisp/hindent.el
extra-source-files:
 README.md
 CHANGELOG.md
 BENCHMARKS.md
 TESTS.md

source-repository head
    type:           git
    location:       https://github.com/mihaimaruseac/hindent

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  exposed-modules:   HIndent
                     HIndent.Types
                     HIndent.Pretty
                     HIndent.CabalFile
                     HIndent.CodeBlock
  build-depends:     base >= 4.7 && <5
                   , containers
                   , Cabal
                   , filepath
                   , directory
                   , haskell-src-exts >= 1.20
                   , monad-loops
                   , mtl
                   , bytestring
                   , utf8-string
                   , transformers
                   , exceptions
                   , text
                   , yaml

executable hindent
  hs-source-dirs:    src/main
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  main-is:           Main.hs
  other-modules: Path.Find
  build-depends:     base >= 4 && < 5
                   , hindent
                   , bytestring
                   , utf8-string
                   , haskell-src-exts
                   , ghc-prim
                   , directory
                   , text
                   , yaml
                   , unix-compat
                   , deepseq
                   , path
                   , path-io
                   , transformers
                   , exceptions
                   , optparse-applicative

test-suite hindent-test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/main/
  default-language:  Haskell2010
  main-is: Test.hs
  other-modules: Markdone
  build-depends:     base >= 4 && <5
                   , hindent
                   , haskell-src-exts
                   , monad-loops
                   , mtl
                   , bytestring
                   , utf8-string
                   , hspec
                   , directory
                   , deepseq
                   , exceptions
                   , utf8-string
                   , Diff

benchmark hindent-bench
  type: exitcode-stdio-1.0
  hs-source-dirs:    src/main
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Benchmark.hs
  other-modules: Markdone
  build-depends:     base >= 4 && < 5
                   , hindent
                   , bytestring
                   , utf8-string
                   , haskell-src-exts
                   , ghc-prim
                   , directory
                   , criterion
                   , deepseq
                   , exceptions
                   , mtl
