name:                hindent
version:             5.3.5
synopsis:            Extensible Haskell pretty printer
description:         Extensible Haskell pretty printer. Both a library and an executable.
                     .
                     See the Github page for usage\/explanation: <https://github.com/mihaimaruseac/hindent>
license:             BSD3
stability:           Unstable
license-file:        LICENSE.md
author:              Mihai Maruseac, Chris Done, Andrew Gibiansky, Tobias Pflug, Pierre Radermecker
maintainer:          Mihai Maruseac
copyright:           2014 Chris Done, 2015 Andrew Gibiansky, 2021 Mihai Maruseac
category:            Development
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/mihaimaruseac/hindent
bug-reports:         https://github.com/mihaimaruseac/hindent/issues
data-files:          elisp/hindent.el
extra-source-files:
 README.md
 CHANGELOG.md
 BENCHMARKS.md
 TESTS.md

source-repository head
    type:           git
    location:       https://github.com/mihaimaruseac/hindent

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  exposed-modules:   HIndent
                     HIndent.Applicative
                     HIndent.CabalFile
                     HIndent.CodeBlock
                     HIndent.Language
                     HIndent.LanguageExtension
                     HIndent.LanguageExtension.Conversion
                     HIndent.LanguageExtension.Types
                     HIndent.ModulePreprocessing
                     HIndent.ModulePreprocessing.CommentRelocation
                     HIndent.Parse
                     HIndent.Pragma
                     HIndent.Pretty
                     HIndent.Pretty.Combinators
                     HIndent.Pretty.Combinators.Comment
                     HIndent.Pretty.Combinators.Getter
                     HIndent.Pretty.Combinators.Indent
                     HIndent.Pretty.Combinators.Lineup
                     HIndent.Pretty.Combinators.Op
                     HIndent.Pretty.Combinators.Outputable
                     HIndent.Pretty.Combinators.RhsSeparator
                     HIndent.Pretty.Combinators.String
                     HIndent.Pretty.Combinators.Switch
                     HIndent.Pretty.Combinators.Wrap
                     HIndent.Pretty.Import
                     HIndent.Pretty.Import.Sort
                     HIndent.Pretty.NodeComments
                     HIndent.Pretty.Pragma
                     HIndent.Pretty.SigBindFamily
                     HIndent.Pretty.Types
                     HIndent.Types
  build-depends:     base >= 4.7 && <5
                   , containers
                   , Cabal
                   , filepath
                   , directory
                   , ghc-lib-parser-ex
                   , monad-loops
                   , mtl
                   , bytestring
                   , split
                   , utf8-string
                   , transformers
                   , exceptions
                   , syb
                   , regex-tdfa
                   , text
                   , unicode-show
                   , yaml
  if(impl(ghc >= 9.4.1))
    build-depends: ghc-lib-parser >= 9.4.1.20220807 && < 9.5
  else
    build-depends: ghc-lib-parser >= 9.2.3.20220527 && < 9.3

executable hindent
  hs-source-dirs:    src/main
  ghc-options:       -Wall -O2
  default-language:  Haskell2010
  main-is:           Main.hs
  other-modules:     Path.Find
                     Paths_hindent
  build-depends:     base >= 4 && < 5
                   , hindent
                   , bytestring
                   , Cabal
                   , utf8-string
                   , ghc-prim
                   , directory
                   , text
                   , yaml
                   , unix-compat
                   , deepseq
                   , path
                   , path-io
                   , transformers
                   , exceptions
                   , optparse-applicative

test-suite hindent-test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/main/
  default-language:  Haskell2010
  main-is: Test.hs
  other-modules: Markdone
  build-depends:     base >= 4 && <5
                   , hindent
                   , monad-loops
                   , mtl
                   , bytestring
                   , regex-tdfa
                   , utf8-string
                   , hspec
                   , directory
                   , deepseq
                   , exceptions
                   , utf8-string
                   , Diff

benchmark hindent-bench
  type: exitcode-stdio-1.0
  hs-source-dirs:    src/main
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Benchmark.hs
  other-modules: Markdone
  build-depends:     base >= 4 && < 5
                   , hindent
                   , bytestring
                   , utf8-string
                   , ghc-prim
                   , directory
                   , criterion
                   , deepseq
                   , exceptions
                   , mtl
